--- a/model_selection.ipynb
+++ b/model_selection.ipynb
@@ -67,8 +67,28 @@
     "# Change the label dataframe to be compatible with efficient datahandling\n",
     "mca_labels = pd.melt(mca_labels, id_vars = ['Patient'], var_name='Slice', value_name='Label').sort_values(['Patient', 'Slice'])\n",
     "vol_intensities = get_max_intensity_for_dataset(image_data)\n",
-    "train_val_images, test_images, train_val_labels, test_labels = load_and_prepare_images(image_data, mca_labels, vol_intensities, SEED, extra_vols = 5)\n",
+    "train_val_images, test_images, train_val_labels, test_labels = load_and_prepare_images(image_data, mca_labels, vol_intensities, SEED, extra_vols=5)\n",
     "train_images, val_images, train_labels, val_labels = load_and_prepare_images(train_val_images, train_val_labels, vol_intensities, SEED, extra_vols=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_images.groupby(['Patient']))"
    ]
   },
   {
@@ -225,8 +245,7 @@
     "\n",
     "asha_scheduler = ASHAScheduler(metric=\"val_loss\", mode=\"min\", grace_period=10, max_t=EPOCHS+1, reduction_factor=3)\n",
     "\n",
-    "# search = HyperOptSearch(metric=\"val_loss\", mode=\"min\", random_state_seed=SEED)\n",
-    "search = HEBOSearch(metric='val_loss', mode='min', random_state_seed=SEED, max_concurrent=2)\n",
+    "search = HyperOptSearch(metric=\"val_loss\", mode=\"min\", random_state_seed=SEED)\n",
     "\n",
     "\n",
     "tuner = tune.Tuner(\n",
